# ASCII-Magic

./: .gitignore  .pre-commit-config.yaml  README.MD  colorize_ascii.py  image_to_ascii.py  pyproject.toml
src/ascii_magic/: __init__.py  colorize_ascii.py  image_to_ascii.py  text_to_ascii.py  unified_cli.py
tests/: test_text_to_ascii.py  test_unified_cli.py
